# p2p_app

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Cargo.toml  DM_TAB_IMPROVEMENTS.md  KEYBOARD_SHORTCUTS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  REFACTOR_PROGRESS.md  SESSION_FINAL_STATS.txt  build.rs  build_release.sh  diesel.toml  diesel_generate.sh  flake.nix  git_sync.sh  readme.md  sqlite.db  tarpaulin-report.json
.cargo/: config.toml
.claude/: settings.local.json
.github/: CI_GUIDE.md  CI_RESULTS_RESTORED.md  DIOXUS_PLAN.md  FINAL_TEST.md  README_DEBUG.md  README_TESTING.md  SECURITY_FIX_TEST.md  TEST_OUTPUT.md  TIMESTAMPED_ONLY_TEST.md  TIMESTAMP_TEST.md  UNIFIED_WORKFLOW_TEST.md  VERIFY_TIMESTAMPED.md  WORKFLOWS.md  WORKFLOW_REFACTOR.md  WORKFLOW_RESULTS_TEST.md  YAML_FIX_TEST.md
.github/build-outputs/: FAILURE.txt  FAILURE_REPORT.txt  test-output.txt
.github/ci-errors/: test-output.txt
.github/ci-results/: build-matrix.txt  dependency-check_2026-05-04_05-35-37_25302843635.txt  dependency-check_2026-05-05_05-15-49_25359156281.txt  dependency-check_2026-05-06_05-30-28_25418217340.txt  dependency-check_2026-05-07_05-32-57_25477844436.txt  dependency-check_2026-05-08_04-54-06_25537534198.txt  dependency-check_2026-05-09_05-22-43_25592780327.txt  dependency-check_2026-05-10_05-38-19_25620947096.txt  dependency-check_2026-05-11_05-59-26_25653063648.txt  dependency-check_2026-05-12_05-39-22_25715718189.txt  dependency-check_2026-05-13_05-50-08_25781011142.txt  dependency-check_2026-05-14_05-48-55_25844203469.txt  dependency-check_2026-05-15_05-55-43_25902839450.txt  dependency-check_2026-05-16_05-27-50_25953860779.txt  dependency-check_2026-05-17_05-49-53_25982777764.txt  dependency-check_2026-05-18_06-15-37_26016830708.txt  dependency-check_2026-05-19_06-09-15_26079611528.txt  dependency-check_2026-05-20_06-08-30_26144750717.txt  dependency-check_2026-05-21_06-11-26_26208816341.txt  dependency-check_2026-05-22_06-08-20_26271498352.txt  dependency-check_2026-05-23_05-40-23_26324845160.txt  dependency-check_2026-05-24_06-02-20_26353531463.txt  dependency-check_2026-05-25_06-29-03_26386775427.txt  dependency-check_2026-05-26_06-07-52_26435443587.txt  dependency-check_2026-05-27_06-21-40_26494520101.txt  dependency-check_2026-05-28_06-13-17_26558091972.txt  dependency-check_2026-05-30_05-49-05_26676104913.txt  dependency-check_2026-05-31_06-19-27_26705202194.txt  dependency-check_2026-06-01_06-57-20_26740001003.txt  dependency-check_2026-06-02_06-42-41_26803182826.txt  dependency-check_2026-06-03_06-53-46_26868716492.txt  dependency-check_2026-06-04_06-43-33_26935543604.txt  dependency-check_2026-06-05_06-23-44_26999158525.txt  dependency-check_2026-06-06_05-57-59_27054305785.txt  dependency-check_2026-06-07_06-28-21_27084874039.txt  dependency-check_2026-06-08_06-46-53_27120624989.txt  dependency-check_2026-06-09_06-13-20_27187416765.txt  dependency-check_2026-06-10_06-24-57_27257541713.txt  dependency-check_2026-06-11_06-49-48_27329255627.txt  dependency-check_2026-06-12_06-42-30_27399393777.txt  (+147 more)
.github/workflow-logs/: 2026-04-20_08-51-08_24657322721.md  2026-04-20_13-26-00_24669067339.md  2026-04-20_13-26-50_24669067461.md  2026-04-21_09-17-21_24714302089.md  2026-04-21_09-17-37_24714314599.md  2026-04-21_09-18-13_24714301879.md  2026-04-21_09-18-29_24714314601.md  2026-04-21_09-59-59_24716185872.md  2026-04-21_10-00-49_24716185858.md  2026-04-21_20-12-39_24744020498.md  2026-04-21_20-14-13_24744020502.md  2026-04-21_21-20-13_24746976956.md  2026-04-21_21-20-25_24746983539.md  2026-04-21_21-22-44_24747085714.md  2026-04-21_21-22-56_24747088386.md  2026-04-21_21-33-07_24747515178.md  2026-04-21_21-33-22_24747515172.md  2026-04-21_21-51-17_24748243130.md  2026-04-21_21-51-25_24748243161.md  2026-04-21_21-53-40_24748332307.md  2026-04-22_04-02-24_24759479784.md  2026-04-22_04-02-42_24759481021.md  2026-04-22_04-04-13_24759479783.md  (+25 more)
coverage/: cobertura.xml
docs/: 2026-04-05_1800_connection_errors_prompt.md  CI_ANALYSIS_INDEX.md  CI_BUILD_ERROR_ANALYSIS.md  COMPLETION_REPORT.txt  CURRENT_ERRORS.md  FIX_APPLIED.md  PLAN.md  REFACTORING_SUMMARY.md  ci_pipeline.md  clippy_decision_framework.md  codebase_metrics.md  dependencies.md  dioxus_implementation.md  dioxus_research.md  dual_frontend_architecture.md  error_visibility_explanation.md  feature_sizes.md  keyboard_modifier_detection.md  old_agents.md  old_claude.md  prompt_log.md  session_mouse_handler_fixes.md  tui_layout_rows.md  user_stories.md
scripts/: README.md  add_generated_docs.py  extract_coverage_summary.py  generate_metrics.py
src/: behavior.rs  db.rs  dioxus_app.rs  dioxus_styles.rs  dioxus_swarm.rs  fmt.rs  lib.rs  lib.rs.bak  logging.rs  logging_config.rs  messages.rs  models_generated.rs  models_insertable.rs  models_manual.rs  models_queryable.rs  network.rs  nickname.rs  peers.rs  schema.rs  swarm_handler.rs  tui_events.rs  tui_helpers.rs  tui_render.rs  tui_render_state.rs  tui_tabs.rs  tui_test_state.rs  types.rs
tests/: additional_coverage.rs  behavior.rs  click_handlers.rs  db.rs  db_selection.rs  fmt.rs  logging.rs  logging_config.rs  logging_test_utils.rs  messages.rs  network.rs  nickname.rs  p2p_integration.rs  peers.rs  swarm_handler.rs  test_utils.rs  tui_binary_integration.rs  tui_chat.rs  tui_events.rs  tui_helpers.rs  tui_integration.rs  tui_render_integration.rs  tui_state.rs  tui_tabs_dedicated.rs  tui_tasks.rs  tui_test_state.rs  tui_test_state_dedicated.rs  types.rs  unit_bin_tui_click_handlers.rs  unit_bin_tui_command_processor.rs  unit_bin_tui_event_source.rs  unit_bin_tui_input_processor.rs  unit_bin_tui_main_loop.rs  unit_bin_tui_message_handlers.rs  unit_bin_tui_render_loop_mod.rs  unit_bin_tui_scroll_handlers.rs  unit_bin_tui_state.rs  unit_db.rs  unit_lib.rs  unit_logging.rs  (+10 more)
(+87 files in other folders)
