[package]
name = "p2p_app"
version = "0.1.0"
edition = "2024"
default-run = "p2p_chat_tui"

[profile.release]
## https://github.com/johnthagen/min-sized-rust
strip = true      # Strip symbols from binary
opt-level = 'z'   # Optimize for size
lto = 'fat'       # Enable fat link-time optimization
codegen-units = 1 # Reduce parallel codegen units to increase optimizations
panic = 'abort'   # Abort on panic
overflow-checks = false # Disable runtime integer overflow checks

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
panic = 'unwind'

[features]
default = [ "mdns", "tracing", "quic", "tui" ]
basic = [ "dep:libp2p" ]
mdns = [ "dep:libp2p", "libp2p/mdns" ]
sqlite_bundled = [ "dep:libp2p", "dep:libsqlite3-sys" ]
quic = [ "dep:libp2p", "dep:libp2p-quic" ]
tracing = [ "dep:libp2p", "dep:tracing", "dep:tracing-subscriber" ]
tui = [ "dep:ratatui", "dep:ratatui-textarea", "dep:crossterm", "dep:atty" ]
dioxus = [ "dep:dioxus" ]
dioxus-desktop = [ "dep:dioxus-desktop" ]

[dependencies]
libp2p-quic = { version = "=0.13.0", optional = true }
tracing = { version = "=0.1.44", optional = true }
tracing-subscriber = { version = "=0.3.23", optional = true }
ratatui = { version = "=0.30", optional = true }
ratatui-textarea = { version = "0.8", optional = true, default-features = false, features = ["crossterm"] }
crossterm = { version = "=0.29", optional = true }
atty = { version = "=0.2", optional = true }
dioxus = { version = "=0.7", features = ["fullstack"], optional = true }
dioxus-desktop = { version = "0.7", optional = true }
tokio-stream = "0.1"

# ORM mapper we use to access our SQLite database
diesel = { version = "=2.3.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono" ] }
# feature "chrono" used for TIMESTAMP columns
# by default we dynamically link to SQLite installed in your system.
# to instead bundle SQLite, you could uncomment the next line:
libsqlite3-sys = { version = "0.36.0", features = ["bundled"], optional = true }
#libsqlite3-sys = "0.35.0"

# for embedding the migration sql scripts and update the database found during runtime to reflect the expected structure
diesel_migrations = { version = "=2.3.1" }

# this library allows us to load environment variables from a .env file.
# This allows users a second way to specify the path to the database (with variable name: "DATABASE_URL")
dotenvy = {version = "=0.15.7" }

# feature set copied from chat example
libp2p = { version = "=0.56.0", features = [
    "tokio",
    "gossipsub",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
    "request-response",
    "serde",
    "json",
], optional = true }

libp2p-request-response = { version = "0.29", features = ["json"] }

# async runtime also used for libp2p
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "io-util", "io-std" ] }
# features needed for tokio::main macro: "rt-core" & "macros"
# feature "io-util" is used for AsyncBufReadExt
# feature "io-std" gives us io::stdin()

# libp2p uses tracing crate to log events - subscriber can help to debug issues
# enable with "tracing" feature

# for once_cell used in logging
once_cell = "1"

# async stream helper
async-stream = "0.3"

# nice error handing
color-eyre ={ version = "=0.6.5" }
chrono = { version = "0.4.44", features = ["clock"] }
libp2p-identity = "0.2.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
petname = "1.0"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
once_cell = "1"

[[bin]]
name = "p2p_chat"
path = "src/bin/p2p_chat.rs"

[[bin]]
name = "p2p_chat_tui"
path = "src/bin/p2p_chat_tui.rs"
required-features = ["tui"]

[[bin]]
name = "p2p_chat_dioxus"
path = "src/bin/p2p_chat_dioxus.rs"
required-features = ["dioxus-desktop"]
